# Xianerbing-podcast-cutter

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  _package.py  docker-compose.yml  package.bat  pyproject.toml  使用说明.md  启动PodcastZ.command  安装PodcastZ.command
backend/: __init__.py  config.py  ffmpeg_util.py  main.py  models.py
backend/api/: routes.py
backend/pipeline/: __init__.py  detect.py  editplan.py  lexicon.py  render.py  semantic.py  semantic_llm.py  smooth.py  transcribe.py  vad.py
backend/workers/: task_queue.py
frontend/: app.js  index.html  style.css
tests/: smoke_test.py
